--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cedricaf.github.io/Keuzedeel-Front-end",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -14,8 +15,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+    
   },
+
+  
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -33,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
+
+  
 }
