--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ckiraly.com/Front-end",
+  "homepage": "https://cedricaf.github.io/Front-end",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
